<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:id="@+id/car_info"
    android:background="@drawable/onecar_mileage_background">


    <Button
        android:id="@+id/btn_onecar_call"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/onecar_mileage_call"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_onecar_exit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/onecar_mileage_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_onecar_call" />

    <TextView
        android:id="@+id/tv_onecar_call"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="0972001344"
        android:textColor="@color/orange"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_onecar_exit"
        app:layout_constraintStart_toEndOf="@+id/btn_onecar_call"
        app:layout_constraintTop_toTopOf="@+id/btn_onecar_call" />


    <TextView
        android:id="@+id/tv_onecar_status_1_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/normal"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/btn_onecar_call" />

    <TextView
        android:id="@+id/tv_onecar_status_1_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/stratset"
        android:textColor="@color/orange"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_onecar_status_1_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier" />


    <TextView
        android:id="@+id/tv_onecar_status_2_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/trunOff"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/tv_onecar_status_1_value" />

    <TextView
        android:id="@+id/tv_onecar_status_2_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/stratset"
        android:textColor="@color/orange"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_onecar_status_2_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier" />


    <TextView
        android:id="@+id/tv_onecar_status_3_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/idleSpeed"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/tv_onecar_status_2_value" />

    <TextView
        android:id="@+id/tv_onecar_status_3_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/stratset"
        android:textColor="@color/orange"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_onecar_status_3_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier" />


    <TextView
        android:id="@+id/tv_onecar_status_4_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Speed"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/tv_onecar_status_3_value" />

    <TextView
        android:id="@+id/tv_onecar_status_4_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/stratset"
        android:textColor="@color/orange"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_onecar_status_4_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier" />

    <TextView
        android:id="@+id/tv_onecar_status_5_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/totalMileage"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/tv_onecar_status_4_value" />

    <TextView
        android:id="@+id/tv_onecar_status_5_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/stratset"
        android:textColor="@color/orange"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_onecar_status_5_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier" />

    <TextView
        android:id="@+id/snippet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dayAccumulate"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_onecar_status_5_title" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:barrierDirection="end"
        app:constraint_referenced_ids="tv_onecar_status_1_title,tv_onecar_status_2_title,tv_onecar_status_3_title,tv_onecar_status_4_title,tv_onecar_status_5_title" />


</androidx.constraintlayout.widget.ConstraintLayout>